<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="starting_score">0</string>
    <string name="three_points">+3 points</string>
    <string name="two_points">+2 points</string>
    <string name="free_throw">Free throw</string>
    <string name="correct_button">Correct</string>
    <string name="reset_button">Reset</string>
</resources>
