<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                style="@style/TeamHeader"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/ScoreText"
                android:fontFamily="sans-serif-light"
                android:text="@string/starting_score" />

            <Button
                android:id="@+id/team_a_three_points"
                style="@style/ButtonStyle"
                android:onClick="addThreeForTeamA"
                android:text="@string/three_points" />

            <Button
                android:id="@+id/team_a_two_points"
                style="@style/ButtonStyle"
                android:onClick="addTwoForTeamA"
                android:text="@string/two_points" />

            <Button
                android:id="@+id/team_a_free_throw"
                style="@style/ButtonStyle"
                android:onClick="addOneForTeamA"
                android:text="@string/free_throw" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray">

        </View>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamHeader"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/ScoreText"
                android:fontFamily="sans-serif-light"
                android:text="@string/starting_score" />

            <Button
                android:id="@+id/team_b_three_points"
                style="@style/ButtonStyle"
                android:onClick="addThreeForTeamB"
                android:text="@string/three_points" />

            <Button
                android:id="@+id/team_b_two_points"
                style="@style/ButtonStyle"
                android:onClick="addTwoForTeamB"
                android:text="@string/two_points" />

            <Button
                android:id="@+id/team_b_free_throw"
                style="@style/ButtonStyle"
                android:onClick="addOneForTeamB"
                android:text="Free throw" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/correct_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reset_button"
        android:layout_alignLeft="@+id/reset_button"
        android:layout_alignStart="@+id/reset_button"
        android:layout_marginBottom="22dp"
        android:onClick="correctScore"
        android:text="@string/correct_button"

        />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/reset_button" />

</RelativeLayout>
